find_package(Catch2 REQUIRED)
find_package(MPI COMPONENTS CXX REQUIRED)
if (MPI_FOUND)
    message(STATUS "[MPI] found mpi.h at ${MPI_CXX_INCLUDE_DIRS}")
    include_directories(${MPI_CXX_INCLUDE_DIRS})
endif ()
set(TEST_LIBS Catch2::Catch2 -lstdc++fs ${MPI_CXX_LIBRARIES} ${CPP_LOGGER_LIBRARIES} )
include_directories(.)

set(PFS /p/gpfs1/iopp/temp/unifyfs/data)
set(examples posix_gcc_test)

function(gcc_base example)
    add_executable(${example} ${example}.cpp ${TEST_SRC})
    target_link_libraries(${example} ${TEST_LIBS} -rdynamic)
endfunction()

function(gcc_unifyfs example)
    add_executable(${example}_unifyfs ${example}.cpp ${TEST_SRC})
    target_link_libraries(${example}_unifyfs -L${CMAKE_SOURCE_DIR}/dependency/.spack-env/view/lib unifyfs_gotcha -ldl ${TEST_LIBS})
endfunction()

function(gcc_unifyfs_test test_name test_tag)
    add_test(NAME ${test_name} COMMAND "${CMAKE_BINARY_DIR}/test/posix/pegasus" --durations yes --reporter compact --pfs ${PFS} ${test_tag})
    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT LD_PRELOAD=${CMAKE_BINARY_DIR}/libunifyfs_gotcha.so)
    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT SHM_PATH=${SHM})
    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT PFS_PATH=${PFS})
endfunction()

function(mpi_unifyfs_test test_name test_tag)
    add_test(NAME ${test_name} COMMAND ${CMAKE_PREFIX_PATH}/bin/mpirun -n 4 ${CMAKE_BINARY_DIR}/test/posix/pegasus_mpi --durations yes --reporter compact --pfs ${PFS} ${test_tag})
    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT LD_PRELOAD=${CMAKE_BINARY_DIR}/libunifyfs_gotcha_mpi∂.so)
    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT SHM_PATH=${SHM})
    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT PFS_PATH=${PFS})
    set_property(TEST ${test_name} APPEND PROPERTY ENVIRONMENT MPICH_DBG_LEVEL=VERBOSE)
endfunction()


foreach (example ${examples})
    gcc_base(${example})
    add_test(NAME test_${example} COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}" --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_1K COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}" --request_size 1024 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_16K COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}" --request_size 16384 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_128K COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}" --request_size 131072 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_1M COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}" --request_size 1048576 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_16M COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}" --request_size 16777216 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})

    gcc_unifyfs(${example})
    add_test(NAME test_${example}_unifyfs_default COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}_unifyfs" --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_unifyfs_1K COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}_unifyfs" --request_size 1024 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_unifyfs_16K COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}_unifyfs" --request_size 16384 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_unifyfs_128K COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}_unifyfs" --request_size 131072 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_unifyfs_1M COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}_unifyfs" --request_size 1048576 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})
    add_test(NAME test_${example}_unifyfs_16M COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}_unifyfs" --request_size 16777216 --durations yes --reporter compact --pfs ${PFS} --shm ${SHM})

endforeach ()

macro(iteration example operations)
    gcc_base(${example})
    foreach (operation IN LISTS ${operations})
        add_test(NAME test_${example}_${operation} COMMAND "${CMAKE_BINARY_DIR}/test/posix/${example}" --durations yes --reporter compact --pfs ${PFS} "[operation=${operation}]")
        gcc_unifyfs_test(test_${example}_unifyfs_${operation} "[operation=${operation}]")
    endforeach ()
endmacro()

macro(iteration_mpi example operations)
    gcc_base(${example})
    foreach (operation IN LISTS ${operations})
        add_test(NAME test_${example}_${operation} COMMAND ${CMAKE_PREFIX_PATH}/bin/mpirun -n 4 ${CMAKE_BINARY_DIR}/test/posix/${example} --durations yes --reporter compact --pfs ${PFS} "[operation=${operation}]")
        mpi_unifyfs_test(test_${example}_unifyfs_${operation} "[operation=${operation}]")
    endforeach ()
endmacro()


set(operations write raw)
iteration(pegasus operations)

set(operations write raw raw_shared input read_only priority_write)
iteration_mpi(pegasus_mpi operations)